feat: patch how to create custom blog

--- a/docs/如何搭建自己的博客.md
+++ b/docs/如何搭建自己的博客.md
@@ -29,7 +29,7 @@ v14.17.5 // <-- 这里的版本号应该是你安装的那个
 ## 安装 VSCode
 
 - 打开下载地址：[https://code.visualstudio.com/](https://code.visualstudio.com/#alt-downloads)
-- 下载安装后，打开软件配置快速启动：[https://www.jianshu.com/](https://www.jianshu.com/p/6dc2945c19b6)
+- MacOS 用户可以下载安装后，打开软件配置快速启动：[https://www.jianshu.com/](https://www.jianshu.com/p/6dc2945c19b6)
 
 > 接下来我们开始创建项目
 
@@ -46,7 +46,6 @@ mkdir blog
 cd blog
 git init
 npm init
-vscode .
 ```
 
 - 以上4个命令分别代表：
@@ -54,12 +53,14 @@ vscode .
   2. 进入`blog`文件夹
   3. 初始化`git`（后面部署时会用到）
   4. 初始化`npm`，会在`blog`目录下生成`package.json`
-  5. 使用`vscode`打开`blog`
+
+- 在输入`npm init`之后，命令行会进入提示阶段，可以给项目起一个任意的`name`，然后一路`回车`即可
 
 ## 使用 VuePress（next版本）
 
 - 打开`vuepress`文档：[https://v2.vuepress.vuejs.org/](https://v2.vuepress.vuejs.org/zh/guide/getting-started.html#%E6%89%8B%E5%8A%A8%E5%AE%89%E8%A3%85)
 - 我们从**手动安装**的**步骤3**开始一直往下，就可以在本地启动我们的博客项目了
+- 注：`package.json`是一个`json`类型的文件，需要满足其格式约束，你可以把内容粘贴到：[https://jsonlint.com/](https://jsonlint.com/) 来验证内容格式的正确与否
 
 ## 添加主题
 
@@ -71,9 +72,22 @@ npm install @calibur/vuepress-theme-eva
 
 - 创建配置文件：
 
-```sh
+<code-group>
+  <code-group-item title="MacOS" active>
+
+  ```sh
 touch vuepress.config.ts
 ```
+
+  </code-group-item>
+  <code-group-item title="Windows">
+
+  ```sh
+type nul > vuepress.config.ts
+```
+
+  </code-group-item>
+</code-group>
 
 - 写入配置文件到`vuepress.config.ts`：
 
@@ -100,6 +114,15 @@ npm run docs:dev
 - 这个时候你会发现之前能展示的`README.md`无法展示了，那是因为这个主题默认不展示`README.md`，但你也不能删除它，我们可以创建其他文件来写博客
 - 你可以在`README.md`同级目录下，创建`任意文件名.md`来写新的博文，重启博客就可以看到了
 - 有关`markdown`语法参见：[markdown手册](https://www.appinn.com/markdown/)
+- 在md文件顶部为页面设置标题、描述、时间等信息：[frontmatter手册](https://v2.vuepress.vuejs.org/zh/guide/page.html#frontmatter)，如：
+
+```md
+---
+title: 页面的标题
+description: 页面的描述
+date: 页面的时间
+---
+```
 
 ## 将本地代码提交到远端
 
