feat: update eva plugin

--- a/docs/如何搭建自己的博客.md
+++ b/docs/如何搭建自己的博客.md
@@ -60,7 +60,7 @@ npm init
 
 - 打开`vuepress`文档：[https://v2.vuepress.vuejs.org/](https://v2.vuepress.vuejs.org/zh/guide/getting-started.html#%E6%89%8B%E5%8A%A8%E5%AE%89%E8%A3%85)
 - 我们从**手动安装**的**步骤3**开始一直往下，就可以在本地启动我们的博客项目了
-- 注：`package.json`是一个`json`类型的文件，需要满足其格式约束，你可以把内容粘贴到：[https://jsonlint.com/](https://jsonlint.com/) 来验证内容格式的正确与否
+- 注：`package.json`是一个`json`类型的文件，需要满足其格式约束，你可以把内容粘贴到：[https://jsonlint.com/](https://jsonlint.com/) 来验证内容格式的正确性
 
 ## 添加主题
 
@@ -114,13 +114,12 @@ npm run docs:dev
 - 这个时候你会发现之前能展示的`README.md`无法展示了，那是因为这个主题默认不展示`README.md`，但你也不能删除它，我们可以创建其他文件来写博客
 - 你可以在`README.md`同级目录下，创建`任意文件名.md`来写新的博文，重启博客就可以看到了
 - 有关`markdown`语法参见：[markdown手册](https://www.appinn.com/markdown/)
-- 在md文件顶部为页面设置标题、描述、时间等信息：[frontmatter手册](https://v2.vuepress.vuejs.org/zh/guide/page.html#frontmatter)，如：
+- 在md文件顶部为页面设置标题、描述等信息：[frontmatter手册](https://v2.vuepress.vuejs.org/zh/guide/page.html#frontmatter)，如：
 
 ```md
 ---
 title: 页面的标题
 description: 页面的描述
-date: 页面的时间
 ---
 ```
 
@@ -148,7 +147,6 @@ git push origin master
 - 需要注意的是：
   1. 我们的代码默认分支是在`master`，上面文档中的**配置样例**第6行指定的是`main`分支，所以要把`main`改成`master`
   2. **配置样例**第44行执行的脚本是`yarn docs:build`，和我们的`npm run docs:build`是一样的效果，无需修改
-  3. **配置样例**第57行中的`GITHUB_TOKEN`接下来是我们要配置的
 
 - 配置`github pages`发布源：[https://docs.github.com/](https://docs.github.com/cn/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site)，将分支改为：`gh-pages`，目录为：`/(root)`
 - 配置完成后，以后每当本地提交代码，git 都会自动更新你的修改到个人博客站点
